--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -1,9 +1,3 @@
-/*!
- * Clean Blog v1.0.0 (http://startbootstrap.com)
- * Copyright 2015 Start Bootstrap
- * Licensed under Apache 2.0 (https://github.com/IronSummitMedia/startbootstrap/blob/gh-pages/LICENSE)
- */
-
 body {
   font-family: 'Lora', 'Times New Roman', serif;
   font-size: 20px;
@@ -23,12 +17,7 @@ h4,
 h5,
 h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: normal;
-  line-height: 1;
-}
-h6.powered_by {
-  font-size: 13px;
-  margin-top: 0px;
+  font-weight: 800;
 }
 a {
   color: #404040;
@@ -83,12 +72,12 @@ hr.small {
     color: rgba(255, 255, 255, 0.8);
   }
   .navbar-custom .nav li a {
-    color: white;
+    color: rgba(0, 153, 255, 0.7);
     padding: 20px;
   }
   .navbar-custom .nav li a:hover,
   .navbar-custom .nav li a:focus {
-    color: rgba(255, 255, 255, 0.8);
+    color: #0099ff;
   }
 }
 @media only screen and (min-width: 1170px) {
@@ -152,7 +141,7 @@ hr.small {
 .intro-header .post-heading,
 .intro-header .page-heading {
   padding: 100px 0 50px;
-  color: white;
+  color: rgba(0, 133, 161, 0.8);
 }
 @media only screen and (min-width: 768px) {
   .intro-header .site-heading,
@@ -405,37 +394,4 @@ img::-moz-selection {
 }
 body {
   webkit-tap-highlight-color: #0085a1;
-}
-
-.svg-center {
-    display: inline;
-    position: relative;
-    top: 3px;
-}
-
-@font-face {
-    font-family: 'glyphterregular';
-    src: url('../fonts/glyphter-webfont.eot');
-    src: url('../fonts/glyphter-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/glyphter-webfont.woff2') format('woff2'),
-         url('../fonts/glyphter-webfont.woff') format('woff'),
-         url('../fonts/glyphter-webfont.ttf') format('truetype'),
-         url('../fonts/glyphter-webfont.svg#glyphterregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-.learn-icon {
-  position: relative;
-  top: 5px;
-  display: inline-block;
-  font-family: 'glyphterregular';
-  font-style: normal;
-  font-weight: normal;
-  line-height: 1;
-  color:#fff;
-
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
