--- a/less/clean-blog.less
+++ b/less/clean-blog.less
@@ -93,11 +93,11 @@ hr.small {
 		.nav {
 			li {
 				a {
-					color: white;
+					color: @link-faded;
 					padding: 20px;
 					&:hover,
 					&:focus {
-						color: @white-faded;
+						color: @link-primary;
 					}
 				}
 			}
@@ -167,7 +167,7 @@ hr.small {
 	.post-heading,
 	.page-heading {
 		padding: 100px 0 50px;
-		color: white;
+		color:@brand-faded;
 		@media only screen and (min-width: 768px) {
 			padding: 150px 0;
 		}
