--- a/less/variables.less
+++ b/less/variables.less
@@ -1,10 +1,9 @@
 // Variables
 
-@brand-primary: #0085A1;
+@brand-primary: orangered;
 @brand-faded: fade(@brand-primary, 80%);
 @gray-dark: lighten(black, 25%);
 @gray: lighten(black, 50%);
-@white-faded: fade(white, 80%);
 @gray-light: #eee;
-@link-primary: #09F;
-@link-faded: fade(#09F, 70%);
+@link-primary: orangered;
+@link-faded: fade(orange, 70%);
